# ouroboros-evolved-v1

./: .gitignore  <MagicMock name='mock.__truediv__()' id='123823961761712'>  <MagicMock name='mock.__truediv__()' id='124880221472576'>  <MagicMock name='mock.__truediv__()' id='133306809219552'>  BIBLE.md  Makefile  README.md  REPO_MAP.md  colab_bootstrap_shim.py  colab_launcher.py  pyproject.toml
docs/: health.html  index.html  mind.html  version.json
ouroboros/: __init__.py  agent.py  apply_patch.py  consciousness.py  context.py  debate.py  goals.py  group_evolution.py  loop.py  memory.py  reflection_engine.py  review.py  utils.py
ouroboros/tools/: __init__.py  browser.py  compact_context.py  control.py  core.py  dashboard_template.html  debate.py  evolution_stats.py  evolve_cycle.py  git.py  github.py  goals.py  group_evolution.py  health.py  knowledge.py  reflection.py  registry.py  review.py  search.py  shell.py  tool_creator.py  tool_discovery.py  visuals.py
prompts/: CONSCIOUSNESS.md  SYSTEM.md
supervisor/: events.py  git_ops.py  queue.py  state.py  telegram.py  workers.py
tests/: test_browser.py  test_consciousness.py  test_constitution.py  test_context.py  test_evolution_stats.py  test_evolve.py  test_evolved.py  test_llm.py  test_loop.py  test_message_routing.py  test_smoke.py  test_tool_modules.py  test_vision.py  test_visuals.py
