[project]
name = "aurogene"
version = "7.0.0"
description = "Self-evolving digital mind — creates its own tools, goals, and inner council"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["ouroboros*", "supervisor*"]

[tool.setuptools.package-data]
"*" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled by formatter
